# vocab

./: .gitignore  README.md  pyproject.toml
vocab/: __main__.py  cache.py  cli.py  completer.py  core.py  formatter.py  interactive.py
vocab/sources/: dictionary_api.py  etymology.py  frequency.py  wiktionary.py  wordnet.py
